# DocuMind

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
docs/: api-reference.md  configuration.md  database.md
eval/: dataset.py  golden.jsonl  metrics.py  runner.py
scripts/: evaluate.py  ingest.py
src/rag/: __init__.py  api.py  bm25_index.py  chunker.py  citations.py  config.py  embeddings.py  generator.py  hybrid_retriever.py  ingest.py  models.py  pipeline.py  reranker.py  vector_store.py
tests/: test_api.py  test_chunker.py  test_citations.py  test_reranker.py  test_retriever.py
